Fix pagination in the group overview page
https://progress.opensuse.org/issues/52745

Pagination is not responsive and breaks the screen adding scroll bars

This is a solution based on allow multiple lines and showing all the
pages at the same time without summarizing

Additionally a new css is added to bold the current page in the
pagination bar

--- a/assets/stylesheets/comments.scss
+++ b/assets/stylesheets/comments.scss
@@ -51,3 +51,18 @@
 .comment-editor {
     margin-bottom: 20px;
 }
+
+.pagination {
+    display: inline-block;
+
+    li {
+        color: $btn-default-color;
+        float: left;
+        text-decoration: none;
+        transition: background-color .3s;
+    }
+
+    .active{
+        font-weight: bold;
+    }
+}
